--- a/src/app/pages/login/login.page.html
+++ b/src/app/pages/login/login.page.html
@@ -15,7 +15,7 @@
         <ion-label>
           <img src="../../../assets/images/user.svg" alt="">
         </ion-label>
-        <ion-input formControlName="username" type="text" placeholder="رقم الهاتف"></ion-input>
+        <ion-input formControlName="phone" type="text" placeholder="رقم الهاتف"></ion-input>
       </ion-item>
       <ion-item class="animate__animated animate__fadeInBottomLeft duration">
         <ion-label>
