--- a/src/app/pages/add/add.page.scss
+++ b/src/app/pages/add/add.page.scss
@@ -1,3 +1,19 @@
+ion-header.add {
+  ion-title {
+    color: #040920;
+    text-align: center;
+    font-family: 'bold';
+    font-size: 20px;
+  }
+
+  p {
+    font-size: 20px;
+    font-family: 'bold';
+
+    padding-inline: 16px;
+  }
+}
+
 .swiper.addSlide {
   width: 100%;
   height: 300px;
@@ -23,14 +39,23 @@
     align-items: center;
     height: 100%;
     background: #E7E7EC;
+
+    img.myImg {
+      display: block;
+      // width: 100%;
+      // height: 100%;
+      object-fit: cover;
+    }
+
+    img.deleteBtn {
+      position: absolute;
+      top: 10px;
+      left: 20px;
+    }
   }
 
-  .swiper-slide img {
-    display: block;
-    // width: 100%;
-    // height: 100%;
-    object-fit: cover;
-  }
+  // .swiper-slide
+
 }
 
 .header-image {
@@ -111,12 +136,29 @@ ion-footer {
 
   ion-button {
     font-family: 'bold';
-    --border-radius: 25px;
-    border-radius: 25px;
+    --border-radius: 8px;
+    border-radius: 8px;
     height: 50px;
-    margin-block: 12px;
+    margin: 12px;
   }
 
+  ion-buttons.options {
+    ion-button:first-of-type {
+      background: #F3F3F5;
+      --background: #F3F3F5;
+      color: #040920;
+    }
+
+    ion-button {
+      font-family: 'bold';
+      --border-radius: 8px;
+      border-radius: 8px;
+      height: 50px;
+      margin: 12px;
+      width: 50%;
+    }
+
+  }
 }
 
 
