--- a/src/app/pages/details/details.page.html
+++ b/src/app/pages/details/details.page.html
@@ -3,25 +3,26 @@
     <ion-button slot="start" (click)="back()">
       <img src="../../../assets/images/back2.svg" alt="">
     </ion-button>
-    <ion-button slot="end">
+    <!-- <ion-button slot="end">
       <img src="../../../assets/images/share.svg" alt="">
-    </ion-button>
+    </ion-button> -->
   </div>
   <swiper #mySlide dir="rtl" [pagination]="{
     type: 'fraction'
   }" [navigation]="false" class="mySwiper detaileSlide">
+    <ng-template *ngFor="let img of build?.images" swiperSlide>
+      <img [defaultImage]="'../../../assets/images/buildplaceholder.png'" [lazyLoad]="img" alt="">
+    </ng-template>
+    <ng-template *ngIf="build?.images.length==0" swiperSlide>
+      <img src="../../../assets/images/buildplaceholder.png" alt="">
+    </ng-template>
+    <!--
     <ng-template swiperSlide>
       <img src="../../../assets/images/img_card.png" alt="">
     </ng-template>
     <ng-template swiperSlide>
       <img src="../../../assets/images/img_card1.png" alt="">
-    </ng-template>
-    <ng-template swiperSlide>
-      <img src="../../../assets/images/img_card.png" alt="">
-    </ng-template>
-    <ng-template swiperSlide>
-      <img src="../../../assets/images/img_card1.png" alt="">
-    </ng-template>
+    </ng-template> -->
   </swiper>
 
   <div class="body_details">
