--- a/src/global.scss
+++ b/src/global.scss
@@ -126,3 +126,18 @@ ng-otp-input>div {
   margin-bottom: 24px !important;
 
 }
+
+.qr-code {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-top: 50px;
+
+  img {
+    object-fit: cover;
+    width: 255px;
+    height: 255px;
+    border: 4px solid #F3F3F5;
+    border-radius: 20px;
+  }
+}
