--- a/src/app/pages/login/login.page.html
+++ b/src/app/pages/login/login.page.html
@@ -30,7 +30,7 @@
     </ion-button>
     <ion-footer mode="ios">
       <!-- <ion-toolbar> -->
-      <p class="register">ليس لدي حساب ؟<a href="register">حساب جديد</a></p>
+      <p class="register">ليس لدي حساب ؟<span (click)="navigate('otp')">حساب جديد</span></p>
       <!-- </ion-toolbar> -->
     </ion-footer>
   </div>
