--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -6,6 +6,10 @@
 ion-header {
   --background: #F8F9FB;
 
+  img.logo {
+    margin-inline: 12px;
+  }
+
   ion-toolbar {
     --background: #F8F9FB;
 
