--- a/src/app/pages/add/add.page.scss
+++ b/src/app/pages/add/add.page.scss
@@ -161,10 +161,16 @@ ion-footer {
   }
 }
 
+// ion-modal.modal-map {
+//   --background: none !important;
 
-ion-modal.modal-map {
-  // width: 90%;
-  // height: 60%;
-  // margin: auto;
-  // border-radius: 16px;
+// ion-content.map-ion-content {
+  //   --background: none !important;
+  // }
+
+capacitor-google-map {
+  display: inline-block;
+  z-index: 9999;
+  width: 100%;
+  height: 100%;
 }
