--- a/src/app/pages/details/details.page.html
+++ b/src/app/pages/details/details.page.html
@@ -3,9 +3,9 @@
     <ion-button slot="start" (click)="back()">
       <img src="../../../assets/images/back2.svg" alt="">
     </ion-button>
-    <!-- <ion-button slot="end">
+    <ion-button slot="end" (click)="share()">
       <img src="../../../assets/images/share.svg" alt="">
-    </ion-button> -->
+    </ion-button>
   </div>
   <swiper #mySlide dir="rtl" [pagination]="{
     type: 'fraction'
@@ -30,7 +30,7 @@
       <h1>{{build?.title}}</h1>
       <p slot="end">{{build?.createdAt |date}}</p>
     </div>
-    <p class="price">{{build?.price}} د.ع</p>
+    <p class="price">{{build?.price |number}} د.ع</p>
     <div class="location" *ngIf="build?.location">
       <div class="img">
         <img src="../../../assets/images/map_i.svg" alt="">
@@ -39,34 +39,69 @@
         <p>الموقع</p>
         <p>{{build?.address}}</p>
       </div>
-      <div class="map" (click)="openMap()">
+      <div class="map" *ngIf="build?.location.lat" (click)="openMap(build?.location)">
         <img src="../../../assets/images/map_i.svg" alt="">
       </div>
     </div>
     <div class="options">
-      <div class="option">
+      <div class="option" *ngIf="build?.area">
         <img src="../../../assets/images/size.svg" alt="">
         <div class="content">
           <p>المساحة</p>
           <p>{{build?.area}} م2</p>
         </div>
       </div>
-      <div class="option">
+      <div class="option" *ngIf="build?.roomsNumber">
         <img src="../../../assets/images/bed.svg" alt="">
         <div class="content">
           <p>الغرف</p>
           <p>{{build?.roomsNumber}} غرف</p>
         </div>
       </div>
-      <div class="option">
+      <div class="option" *ngIf="build?.bathroomNumber">
         <img src="../../../assets/images/bath_room.svg" alt="">
         <div class="content">
           <p>الحمامات</p>
           <p>{{build?.bathroomNumber ?build?.bathroomNumber+ ' حمام':'....' }}</p>
         </div>
       </div>
+      <div class="option" *ngIf="build?.adType">
+        <!-- <img src="../../../assets/images/bath_room.svg" alt=""> -->
+        <div class="content">
+          <p>نوع الاعلان</p>
+          <p>{{build?.adType?.name  }}</p>
+        </div>
+      </div>
+      <div class="option" *ngIf="build?.adGender">
+        <!-- <img src="../../../assets/images/bath_room.svg" alt=""> -->
+        <div class="content">
+          <p>جنس الاعلان</p>
+          <p>{{build?.adGender?.name  }}</p>
+        </div>
+      </div>
+      <div class="option" *ngIf="build?.bondType">
+        <!-- <img src="../../../assets/images/bath_room.svg" alt=""> -->
+        <div class="content">
+          <p>نوع السند</p>
+          <p>{{build?.bondType?.name  }}</p>
+        </div>
+      </div>
+      <div class="option" *ngIf="build?.bondType">
+        <!-- <img src="../../../assets/images/bath_room.svg" alt=""> -->
+        <div class="content">
+          <p>نوع السند</p>
+          <p>{{build?.bondType?.name  }}</p>
+        </div>
+      </div>
+      <div class="option" *ngIf="build?.buildYear">
+        <!-- <img src="../../../assets/images/bath_room.svg" alt=""> -->
+        <div class="content">
+          <p>سنة البناء</p>
+          <p>{{build?.buildYear  }}</p>
+        </div>
+      </div>
     </div>
-    <div class="list">
+    <!-- <div class="list">
       <div class="item_box">
         <p class="start">الطابق</p>
         <p class="end">الأول</p>
@@ -79,12 +114,25 @@
         <p class="start">سنة البناء</p>
         <p class="end">2021</p>
       </div>
-    </div>
+    </div> -->
     <div class="description">
       <h6>الوصف</h6>
       <p>{{build?.description}}</p>
     </div>
+
+    <div class="userProfile" (click)="toProfile()">
+      <ion-avatar slot="start">
+        <img [defaultImage]="'../../../assets/images/userplaceholder.png'" [lazyLoad]="build.userId?.image" />
+      </ion-avatar>
+      <!-- <ion-label> -->
+      <h2>{{build.userId?.fullName||'....'}}</h2>
+      <!-- <p></p> -->
+      <!-- </ion-label> -->
+      <ion-icon slot="end" name="chevron-back-circle-outline"></ion-icon>
+
+    </div>
   </div>
+
 </ion-content>
 <div class="myFooter">
   <ion-buttons>
