--- a/src/app/pages/map/map.page.html
+++ b/src/app/pages/map/map.page.html
@@ -11,7 +11,7 @@
   </ion-toolbar>
 </ion-header> -->
 
-<ion-content>
+<ion-content class="map-ion-content">
   <capacitor-google-map #map id="map"></capacitor-google-map>
 </ion-content>
 <ion-footer>
