--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,10 +1,10 @@
 <ion-header mode="md">
   <ion-toolbar>
-    <ion-button slot="start" fill="clear">
-      <img src="../../assets/images/logo_home.svg">
-    </ion-button>
+    <!-- <ion-button slot="start" fill="clear"> -->
+    <img class="logo" src="../../assets/images/logo_home.svg">
+    <!-- </ion-button> -->
 
-    <ion-avatar slot="end" (click)="profile()">
+    <ion-avatar slot="end" (click)="menu()">
       <img [lazyLoad]="userImage ||'../../../assets/images/userplaceholder.png'"
         [errorImage]="'../../../assets/images/userplaceholder.png'" alt="">
     </ion-avatar>
@@ -303,8 +303,8 @@
     <ion-infinite-scroll-content loadingSpinner="bubbles" loadingText="Loading more data...">
     </ion-infinite-scroll-content>
   </ion-infinite-scroll>
-  <ion-modal #modal mode="ios" trigger="open-modal" [initialBreakpoint]="0.35"
-    [breakpoints]="[0, 0.25,0.35, 0.5, 0.75]">
+  <ion-modal #modal mode="ios" trigger="open-modal" [initialBreakpoint]=".75"
+    [breakpoints]="[0, 0.25,0.35, 0.5, 0.75,1]">
     <ng-template>
       <ion-content>
         <div class="headerModalFilter">
