--- a/src/app/pages/map/map.page.scss
+++ b/src/app/pages/map/map.page.scss
@@ -11,8 +11,13 @@ ion-footer {
   }
 }
 
+
 capacitor-google-map {
   display: inline-block;
+  z-index: 9999;
   width: 100%;
   height: 100%;
+}
+ion-content {
+  --background: none;
 }
