--- a/src/app/pages/myadds/myadds.page.scss
+++ b/src/app/pages/myadds/myadds.page.scss
@@ -76,6 +76,15 @@ ion-content {
       right: 12px;
     }
 
+    ion-button {
+      position: absolute;
+      z-index: 9999;
+      top: 0;
+      left: 12px;
+      font-size: 18px;
+      --padding-start: 0;
+      --padding-end: 0;
+    }
   }
 
   .body_content {
