--- a/src/app/pages/profile/profile.page.scss
+++ b/src/app/pages/profile/profile.page.scss
@@ -58,33 +58,139 @@
   }
 }
 
-// .list {
-.item_box {
-  background: #F4F4F5;
-  border-radius: 8px;
-  padding: 16px 12px;
-  display: flex;
-  justify-content: flex-start;
-  align-items: center;
-  margin-bottom: 16px;
+// // .list {
+// .item_box {
+//   background: #F4F4F5;
+//   border-radius: 8px;
+//   padding: 16px 12px;
+//   display: flex;
+//   justify-content: flex-start;
+//   align-items: center;
+//   margin-bottom: 16px;
 
-  .image {
-    flex-basis: 12%;
-    display: flex;
-    justify-content: start;
-    align-items: center;
+//   .image {
+//     flex-basis: 12%;
+//     display: flex;
+//     justify-content: start;
+//     align-items: center;
+
+//     img {
+//       width: 32px;
+//       height: 32px;
+//       display: block;
+//     }
+//   }
+
+//   .name {
+//     font-size: 16px;
+//     font-family: 'bold';
+//     color: var(--dark-text);
+//   }
+// }
+.container {
+  padding: 0px 16px 32px;
+  margin: auto;
+  max-width: 1024px;
+}
+
+.title_category {
+  margin-block: 0 12px;
+  font-size: 16px;
+  line-height: 19px;
+  color: var(--dark-text);
+  font-family: 'bold';
+}
+
+.add_box_item {
+  margin-bottom: 16px;
+  border-radius: 12px;
+  flex-direction: column;
+  justify-content: flex-start;
+  overflow: hidden;
+  box-shadow: 0px 8px 16px #87899E26;
+  height: fit-content;
+  position: relative;
+
+  .head_box {
+    height: 160px;
+    width: 100%;
 
     img {
-      width: 32px;
-      height: 32px;
       display: block;
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
     }
+
+    span {
+      position: absolute;
+      background: #F1A330;
+      line-height: 14px;
+      font-size: 12px;
+      font-family: 'bold';
+      color: #fff;
+      border-radius: 5px;
+      padding: 2px 4px;
+      top: 7px;
+      right: 12px;
+    }
+
   }
 
-  .name {
-    font-size: 16px;
-    font-family: 'bold';
-    color: var(--dark-text);
+  .body_content {
+    padding: 12px;
+    width: 100%;
+
+    .body_head {
+      display: flex;
+      justify-content: space-between;
+
+      p {
+        margin: 0;
+        font-size: 12px;
+        color: #87899E;
+      }
+    }
+
+    .center_content {
+      display: flex;
+      justify-content: space-between;
+      margin-block: 12px;
+
+      .body_title {
+        font-size: 16px;
+        color: var(--dark-text);
+        font-family: 'bold';
+        text-align: start;
+        margin-block: 0;
+      }
+
+      .price {
+        color: var(--ion-color-primary);
+        font-family: 'bold';
+        margin-block: 0;
+      }
+
+    }
+
+  }
+
+  .footer_content {
+    display: flex;
+    justify-content: flex-start;
+    gap: 24px;
+    align-items: center;
+    border-top: 1px solid rgba(135, 137, 158, 25%);
+
+    p {
+      font-size: 12px;
+      line-height: 14px;
+      color: #87899E;
+      margin-bottom: 0;
+      display: flex;
+      align-items: center;
+      gap: 6px;
+    }
   }
 }
 
